--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "framer-motion": "^11.11.17",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.5"
   },
